--- a/API/GameEngineContents/GameEngineContents.vcxproj
+++ b/API/GameEngineContents/GameEngineContents.vcxproj
@@ -162,6 +162,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="BackForestLevel.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="BakedFish.h">
       <SubType>
       </SubType>
@@ -398,7 +402,27 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="Mine1.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="Mine2.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="Mine3.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="Mine4.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="MineLevel.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="MinePoint.h">
       <SubType>
       </SubType>
     </ClInclude>
@@ -692,6 +716,10 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="BackForestLevel.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="BakedFish.cpp">
       <SubType>
       </SubType>
@@ -930,7 +958,27 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="Mine1.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="Mine2.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="Mine3.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="Mine4.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="MineLevel.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="MinePoint.cpp">
       <SubType>
       </SubType>
     </ClCompile>
