--- a/API/GameEngineContents/GameEngineContents.vcxproj
+++ b/API/GameEngineContents/GameEngineContents.vcxproj
@@ -426,6 +426,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="MineStoneCrushAnimation.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="Mouse.h">
       <SubType>
       </SubType>
@@ -605,7 +609,7 @@
       <SubType>
       </SubType>
     </ClInclude>
-    <ClInclude Include="StoneAddAnimation.h">
+    <ClInclude Include="StoneCrushAnimation.h">
       <SubType>
       </SubType>
     </ClInclude>
@@ -958,6 +962,10 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="MineStoneCrushAnimation.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="Monster.cpp">
       <SubType>
       </SubType>
@@ -1128,7 +1136,7 @@
       <SubType>
       </SubType>
     </ClCompile>
-    <ClCompile Include="StoneAddAnimation.cpp">
+    <ClCompile Include="StoneCrushAnimation.cpp">
       <SubType>
       </SubType>
     </ClCompile>
