--- a/API/GameEngineContents/GameEngineContents.vcxproj
+++ b/API/GameEngineContents/GameEngineContents.vcxproj
@@ -174,6 +174,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="Bat.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="Beer.h">
       <SubType>
       </SubType>
@@ -187,6 +191,14 @@
       </SubType>
     </ClInclude>
     <ClInclude Include="Bread_Shop.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="Bug.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="Clab.h">
       <SubType>
       </SubType>
     </ClInclude>
@@ -333,6 +345,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="Golem.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="Gus.h">
       <SubType>
       </SubType>
@@ -442,6 +458,7 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="MonsterData.h" />
     <ClInclude Include="Mouse.h">
       <SubType>
       </SubType>
@@ -720,6 +737,10 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="Bat.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="Beer.cpp">
       <SubType>
       </SubType>
@@ -733,6 +754,14 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="Bread_Shop.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="Bug.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="Clab.cpp">
       <SubType>
       </SubType>
     </ClCompile>
@@ -874,6 +903,10 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="GiftBox.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="Golem.cpp">
       <SubType>
       </SubType>
     </ClCompile>
