--- a/API/GameEngineContents/GameEngineContents.vcxproj
+++ b/API/GameEngineContents/GameEngineContents.vcxproj
@@ -654,6 +654,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="SubHPFont.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="Swoard.h">
       <SubType>
       </SubType>
@@ -1214,6 +1218,10 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="Particles.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="SubHPFont.cpp">
       <SubType>
       </SubType>
     </ClCompile>
