--- a/API/GameEngineContents/GameEngineContents.vcxproj
+++ b/API/GameEngineContents/GameEngineContents.vcxproj
@@ -158,6 +158,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Abigail.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="Amethyst.h">
       <SubType>
       </SubType>
@@ -733,6 +737,10 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Abigail.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="Amethyst.cpp">
       <SubType>
       </SubType>
