코인 애니메이션 클래스 추가

--- a/API/GameEngineContents/GameEngineContents.vcxproj.filters
+++ b/API/GameEngineContents/GameEngineContents.vcxproj.filters
@@ -455,6 +455,9 @@
     <ClCompile Include="Abigail.cpp">
       <Filter>Actor\03. Play\NPC</Filter>
     </ClCompile>
+    <ClCompile Include="CoinAnimation.cpp">
+      <Filter>Actor\03. Play\Obejct\Effect</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="StardewValley.h" />
@@ -934,6 +937,9 @@
     </ClInclude>
     <ClInclude Include="Abigail.h">
       <Filter>Actor\03. Play\NPC</Filter>
+    </ClInclude>
+    <ClInclude Include="CoinAnimation.h">
+      <Filter>Actor\03. Play\Obejct\Effect</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
