--- a/API/GameEngineContents/GameEngineContents.vcxproj
+++ b/API/GameEngineContents/GameEngineContents.vcxproj
@@ -214,6 +214,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="CoinAnimation.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="Copper.h">
       <SubType>
       </SubType>
@@ -790,6 +794,10 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="Coffe_Shop.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="CoinAnimation.cpp">
       <SubType>
       </SubType>
     </ClCompile>
