--- a/API/GameEngineContents/GameEngineContents.vcxproj
+++ b/API/GameEngineContents/GameEngineContents.vcxproj
@@ -218,6 +218,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="CoinParticle.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="Copper.h">
       <SubType>
       </SubType>
@@ -798,6 +802,10 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="CoinAnimation.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="CoinParticle.cpp">
       <SubType>
       </SubType>
     </ClCompile>
