--- a/API/GameEngineContents/GameEngineContents.vcxproj
+++ b/API/GameEngineContents/GameEngineContents.vcxproj
@@ -222,6 +222,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="Coop.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="Copper.h">
       <SubType>
       </SubType>
@@ -560,10 +564,6 @@
       <SubType>
       </SubType>
     </ClInclude>
-    <ClInclude Include="MyHouse.h">
-      <SubType>
-      </SubType>
-    </ClInclude>
     <ClInclude Include="PlayerEnergyFrame.h">
       <SubType>
       </SubType>
@@ -806,6 +806,10 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="CoinParticle.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="Coop.cpp">
       <SubType>
       </SubType>
     </ClCompile>
@@ -1064,10 +1068,6 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="MoveFlag.cpp">
-      <SubType>
-      </SubType>
-    </ClCompile>
-    <ClCompile Include="MyHouse.cpp">
       <SubType>
       </SubType>
     </ClCompile>
